--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "concurrently": "^9.2.1"
   },
   "dependencies": {
-    "react-router-dom": "^7.9.1"
+    "react-router-dom": "^7.9.1",
+    "helmet": "^8.1.0"
   }
 }
