--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-native-screens": "^4.16.0",
     "react-native-tab-view": "^4.1.3",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-video": "^6.16.1",
     "react-native-worklets": "^0.5.0"
   },
   "devDependencies": {
