--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "lucide-react": "^0.469.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
