--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/blur": "^4.4.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-native-voice/voice": "^3.2.4",
     "@react-native/new-app-screen": "0.81.1",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/material-top-tabs": "^7.3.7",
@@ -22,10 +23,12 @@
     "react-native-calendars": "^1.1313.0",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-pager-view": "^6.9.1",
+    "react-native-permissions": "^5.4.2",
     "react-native-reanimated": "^4.1.0",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
     "react-native-tab-view": "^4.1.3",
+    "react-native-tts": "^4.1.1",
     "react-native-vector-icons": "^10.3.0",
     "react-native-video": "^6.16.1",
     "react-native-worklets": "^0.5.0"
