--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,8 @@
     "react-native-tts": "^4.1.1",
     "react-native-vector-icons": "^10.3.0",
     "react-native-video": "^6.16.1",
-    "react-native-worklets": "^0.5.0"
+    "react-native-worklets": "^0.5.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
