--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native-voice/voice": "^3.2.4",
@@ -18,6 +19,7 @@
     "@react-navigation/material-top-tabs": "^7.3.7",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.8",
+    "axios": "^1.12.2",
     "react": "19.1.0",
     "react-native": "0.81.1",
     "react-native-calendars": "^1.1313.0",
