--- a/voiceAssistant/package.json
+++ b/voiceAssistant/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^17.2.2",
     "edge-tts": "^1.0.1",
     "express": "^5.1.0",
+    "mongodb": "^6.20.0",
+    "node-fetch": "^3.3.2",
     "sentiment": "^5.0.2"
   }
 }
