--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,12 @@
     "start": "node index.js",
     "seed": "node seedCounsellors.js"
   },
-  "keywords": ["mental-health", "counseling", "express", "nodejs"],
+  "keywords": [
+    "mental-health",
+    "counseling",
+    "express",
+    "nodejs"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -21,7 +26,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
-    "nodemailer": "^7.0.6"
+    "nodemailer": "^7.0.6",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
